# rcsop

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  azimuth_angles.cpp  azimuth_angles.h  cleanup.cpp  cleanup.h  clion_color_scheme.icls  colors.cpp  colors.h  draw_lines.cpp  draw_lines.h  gradient.frag  main.cpp  mat_reader.cpp  mat_reader.h  options.h  rcs_sums.cpp  rcs_sums.h  render_points.cpp  render_points.h  scored_point.cpp  scored_point.h  slices.cpp  slices.h  space_point.cpp  space_point.h  types.h  utils.cpp  utils.h
apps/: CMakeLists.txt
apps/rcs-overlay-plotter/: CMakeLists.txt  azimuth_rcs_map.cpp  azimuth_rcs_map.h  input_data_collector.cpp  input_data_collector.h  main.cpp  test_task.cpp  test_task.h
apps/rcs-overlay-plotter/tasks/: azimuth_rcs_plotter.cpp  azimuth_rcs_plotter.h  test_task.cpp  test_task.h
cmake/: FindMATIO.cmake
common/: CMakeLists.txt  camera.cpp  camera.h  scored_point.cpp  scored_point.h  sparse_cloud.h
common/utils/: chronometer.cpp  chronometer.h  types.h
data/: CMakeLists.txt  az_data.cpp  rcs_data.cpp  rcs_data.h  relative_points.cpp  relative_points.h
examples/: CMakeLists.txt  draw_lines.cpp  draw_lines.h  slices.cpp  slices.h
examples/azimuth-angles/: CMakeLists.txt  azimuth_angles.cpp  azimuth_angles.h  main.cpp
examples/camera-lines/: CMakeLists.txt  draw_lines.cpp  draw_lines.h  main.cpp
examples/dense-filter/: CMakeLists.txt  filter-ground-plane.cpp  filter-ground-plane.h  filter-outliers.cpp  filter-outliers.h  main.cpp  points.h
examples/rcs-slices/: CMakeLists.txt  main.cpp  slices.cpp  slices.h
examples/rcs-sums/: CMakeLists.txt  main.cpp  rcs_sums.cpp  rcs_sums.h
examples/sparse-filter/: CMakeLists.txt  cleanup.cpp  cleanup.h  main.cpp
launcher/: CMakeLists.txt  default_options.h  launcher.cpp  launcher.h  launcher_options.cpp  launcher_options.h  main.cpp
launcher/tasks/: azimuth_rcs_plotter.cpp  azimuth_rcs_plotter.h  rcs_slices.cpp  rcs_slices.h  rcs_sums.cpp  rcs_sums.h  sparse_filter.cpp  sparse_filter.h  task_utils.h  test_task.cpp  test_task.h
launcher/tasks/utils/: point_scoring.cpp  point_scoring.h
launcher/utils/: point_scoring.cpp  point_scoring.h  task_utils.cpp  task_utils.h
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/include/: base_point_cloud.h  camera.h  colmap_observer_camera.h  colors.h  dense_cloud.h  id_point.h  image_point.h  model_camera.h  observed_point.h  observer.h  observer_camera.h  observer_position.h  output_data_writer.h  point_cloud.h  scored_cloud.h  scored_point.h  simple_point.h  sparse_cloud.h  texture.h
lib/common/include/utils/: chronometer.h  colmap.h  gauss.h  logging.h  mapping.h  points.h  random.h  rcs.h  sparse.h  types.h  vector.h
lib/common/src/: base_point_cloud.cpp  camera.cpp  chronometer.cpp  colmap_observer_camera.cpp  colors.cpp  dense_cloud.cpp  gauss.cpp  id_point.cpp  image_point.cpp  logging.cpp  model_camera.cpp  observer.cpp  observer_position.cpp  points.cpp  rcs.cpp  scored_cloud.cpp  scored_point.cpp  simple_point.cpp  sparse_cloud.cpp  texture.cpp
lib/common/test/: CMakeLists.txt  colmap_observer_camera_test.cc  hello_test.cc  observer_test.cc
lib/data/: CMakeLists.txt
lib/data/include/: abstract_rcs_map.h  az_data.h  azimuth_minimap_provider.h  azimuth_rcs_data_collection.h  azimuth_rcs_map.h  azimuth_rcs_minimap.h  basic_rcs_map.h  data_point_projector.h  input_data_collector.h  input_image.h  model_writer.h  observer_provider.h  point_cloud_provider.h  rcs_data.h  relative_points.h
lib/data/include/utils/: rcs_data_utils.h
lib/data/src/: az_data.cpp  azimuth_minimap_provider.cpp  azimuth_rcs_data_collection.cpp  azimuth_rcs_map.cpp  azimuth_rcs_minimap.cpp  basic_rcs_map.cpp  data_point_projector.cpp  input_data_collector.cpp  input_image.cpp  model_writer.cpp  observer_provider.cpp  point_cloud_provider.cpp  rcs_data.cpp  relative_points.cpp
lib/data/src/utils/: rcs_data_utils.cpp
lib/rendering/: CMakeLists.txt
lib/rendering/include/: base_renderer.h  cairo_renderer.h  cairo_renderer_context.h  colors.h  observer_renderer.h  options.h  render_points.h  rendering_options.h  sfml_renderer.h  sfml_renderer_context.h
lib/rendering/src/: cairo_renderer.cpp  cairo_renderer_context.cpp  colors.cpp  observer_renderer.cpp  render_points.cpp  sfml_renderer.cpp  sfml_renderer_context.cpp
matlab/: read_rcs.cpp  read_rcs.h
rendering/: CMakeLists.txt  colors.cpp  colors.h  image_point.cpp  image_point.h  render_points.cpp  render_points.h
utils/: Dockerfile  az_data.cpp  az_data.h  cleanup.cpp  cleanup.h  mat_reader.cpp  mat_reader.h  model.cpp  model.h  projection.cpp  projection.h  relative_points.cpp  relative_points.h  types.h  utils.cpp  utils.h
utils/colmap/: Dockerfile  colmap.patch
utils/runtime/: Dockerfile
